big fix for description overflow

--- a/src/snc-alert-email-preview/styles.scss
+++ b/src/snc-alert-email-preview/styles.scss
@@ -247,6 +247,7 @@
       padding: 4px;
       margin: 8px 0px;
       width: 100%;
+      word-break: break-word;
     }
     .bottom {
       margin-bottom: 8px;
